Make html and css base code

--- a/recipes/lasagne.html
+++ b/recipes/lasagne.html
@@ -8,10 +8,19 @@
 </head>
 <body>
     <h1>Lasagne</h1>
-    <p>A recipe from my home in Emilia-Romagna, Italy; this lasagna made with spinach pasta cannot be beat. It's excellent if
-    you want to impress some guests, or even yourself. It may be a bit time consuming, but it's well worth the TLC you put
-    into it.</p>
     
+    <img src="./img/download.jpeg" alt="lasagne">
+
+    <h2> Description</h2>
+
+    <p>A recipe from my home in Emilia-Romagna, Italy; this lasagna made with spinach pasta cannot be beat. It's excellent
+        if
+        you want to impress some guests, or even yourself. It may be a bit time consuming, but it's well worth the TLC you
+        put
+        into it.</p>
+
+        <h3> Ingredients</h3>
+        <ol>Ingredients</ol>
     
 </body>
 </html>
